manifests/0000_30_kube-controller-manager-operator_00_allow-operator.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: allow-operator
  namespace: openshift-kube-controller-manager-operator
spec:
  podSelector:
    matchLabels:
      app: kube-controller-manager-operator
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow ingress for metrics scraping
  - ports:
    - protocol: TCP
      port: 8443
  egress:
  # Allow all egress traffic
  # required for egress to kube-apiserver pods
  - {}
  # Allow DNS resolution
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353
  # Allow access to oauth-apiserver
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-oauth-apiserver
      podSelector:
        matchLabels:
          app: openshift-oauth-apiserver
    ports:
    - protocol: TCP
      port: 8443
  # Allow access to kube-controller-manager namespace for managing operands
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-controller-manager
